<?xml version="1.0" encoding="utf-8"?>

<resources>
    <string name="app_name">Magic Mirror</string>
    <string name="home_name" translatable="false">Mirror Home</string>
    <string name="unknown_ip_address">Unknown IP Address</string>
    <string name="wind_pointer">wind pointer</string>
    <string name="weather_icon">Weather Icon</string>
    <string name="wind_direction_compass">Wind direction compass</string>
    <string name="_10kmh">10 km/h</string>
    <string name="today">Today</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="hiding">Minimising mirror home</string>
    <string name="calendar_permission_denied">Calendar permission was denied</string>
    <string name="location_permission_denied">Location permission was denied</string>
    <string name="buses">Buses</string>
    <string name="settings">Settings</string>
    <string name="settings_toggle">Screen text toggle (minutes)</string>
    <string name="settings_toggle_hint">How often application will switch places of text to mitigate any LCD screen burn</string>
    <string name="settings_toggle_validation">Must be more than 0</string>
    <string name="settings_bus">Bus schedule</string>
    <string name="settings_bus_line">Bus line in Wrocław</string>
    <string name="settings_accu_key">Accuweather API key</string>
    <string name="settings_air_key">IQAir API key</string>
    <string name="settings_events">Events</string>
    <string name="settings_events_select">Select calendars</string>
    <string name="dreamservice">Magic Mirror screen saver</string>
    <string name="settings_weather">Weather and Air</string>

</resources>
